--- a/01-Authentication/login.html
+++ b/01-Authentication/login.html
@@ -61,6 +61,12 @@
       >
         Forgot password?
       </button>
+       <button
+          id="google"
+          class="w-full bg-green-600 text-white py-2 rounded-md hover:bg-blue-700 transition"
+        >
+          Continue With Google ->
+        </button>
     </div>
   </main>
 
