--- a/02-CRUD/index.html
+++ b/02-CRUD/index.html
@@ -35,7 +35,8 @@
             id="title"
             placeholder="Enter todo title"
             class="w-full px-4 py-2 rounded-md border border-white/20 bg-white/10 text-white placeholder-white/60 focus:outline-none focus:ring-2 focus:ring-white"
-          />
+            required
+            />
         </div>
         <div class="flex-1">
           <label class="block mb-2 text-sm font-medium text-white/90">Description</label>
@@ -44,7 +45,8 @@
             placeholder="Enter todo description"
             rows="2"
             class="w-full px-4 py-2 rounded-md border border-white/20 bg-white/10 text-white placeholder-white/60 focus:outline-none focus:ring-2 focus:ring-white"
-          ></textarea>
+            required
+            ></textarea>
         </div>
         <button
           type="submit"
@@ -59,34 +61,9 @@
     <div class="bg-white shadow-md rounded-lg p-6 border border-gray-200">
       <h2 class="text-2xl font-bold mb-6 text-gray-800">All Todos</h2>
 
-      <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-6">
-        <!-- Single Todo Card -->
-        <div class="bg-gray-100 rounded-lg p-4 border border-gray-200 shadow-sm">
-          <h3 class="text-lg font-semibold text-gray-800">Todo Title</h3>
-          <p class="text-gray-600 mt-1">This is the description of the todo item.</p>
-          <div class="flex gap-3 mt-3">
-            <button class="px-3 py-1 text-sm bg-blue-500 hover:bg-blue-600 text-white rounded">
-              Edit
-            </button>
-            <button class="px-3 py-1 text-sm bg-red-500 hover:bg-red-600 text-white rounded">
-              Delete
-            </button>
-          </div>
-        </div>
-
-        <!-- Another Todo -->
-        <div class="bg-gray-100 rounded-lg p-4 border border-gray-200 shadow-sm">
-          <h3 class="text-lg font-semibold text-gray-800">Another Todo</h3>
-          <p class="text-gray-600 mt-1">A second todo item for display.</p>
-          <div class="flex gap-3 mt-3">
-            <button class="px-3 py-1 text-sm bg-blue-500 hover:bg-blue-600 text-white rounded">
-              Edit
-            </button>
-            <button class="px-3 py-1 text-sm bg-red-500 hover:bg-red-600 text-white rounded">
-              Delete
-            </button>
-          </div>
-        </div>
+      <div id="grid" class="grid md:grid-cols-2 lg:grid-cols-3 gap-6">
+       
+        No Todos here!
       </div>
     </div>
   </div>
